--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "customize-cra": "^0.2.13",
     "mobx": "^5.10.1",
     "mobx-react": "^6.1.1",
+    "mobx-react-lite": "^1.4.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
@@ -34,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
