--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.19.5",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.2.13",
+    "esri-loader": "^2.9.2",
     "mobx": "^5.10.1",
     "mobx-react": "^6.1.1",
     "mobx-react-lite": "^1.4.0",
